fix(datepicker): adjust datepicker's z-index

--- a/src/components/Datepicker/datepicker.scss
+++ b/src/components/Datepicker/datepicker.scss
@@ -22,7 +22,6 @@
 
 .sb-datepicker {
   position: relative;
-  width: 29.4rem;
 
   &__input {
     position: relative;
@@ -39,13 +38,16 @@
 
   &__overlay {
     @include popoverComponent();
+    max-width: 29.4rem;
     width: 100%;
     box-sizing: border-box;
+    z-index: 1;
   }
 
   &__actions {
     display: flex;
     justify-content: space-between;
+    background-color: $white;
   }
 
   &__action-button {
@@ -130,6 +132,7 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(6, 1fr);
+  background-color: $white;
 
   &__item {
     @include flexCentering();
@@ -152,6 +155,7 @@
 
   &__numbers-container {
     display: flex;
+    background-color: $white;
   }
 
   &__number-column {
